@@ -24,7 +24,7 @@
 #ifndef CVC_H_
 #define CVC_H_
 
-#define CVC_VERSION "0.8.0-170406_1251"
+#define CVC_VERSION "0.8.0-170412_0102"
 
 extern bool gDebug_cvc;
 extern bool gInteractive_cvc;
